# internal/http/http.go
@@ -4,11 +4,13 @@ import (
 	"errors"
 	"log"
 	"net/http"
+	"os"
 	"time"
 
+	"github.com/gorilla/handlers"
+	"github.com/gorilla/mux"
 	"github.com/gorilla/schema"
 	jsoniter "github.com/json-iterator/go"
-	"github.com/rs/cors"
 
 	"github.com/opencars/opencars/internal/storage"
 	"github.com/opencars/opencars/pkg/version"
@@ -34,8 +36,6 @@ var (
 	ErrRemoteBroken = errors.New("remote server is not available")
 	// ErrInternal is an error for notifying about internal problems.
 	ErrInternal = errors.New(http.StatusText(http.StatusInternalServerError))
-	// ErrNotFound is an error for notifying that entity does not exist.
-	ErrNotFound = errors.New("not found")
 )
 
 var decoder = schema.NewDecoder()
@@ -50,15 +50,15 @@ func sendError(w http.ResponseWriter, code int, msg string) {
 
 // Server is a main server middleware.
 // Adds application headers.
-func Server(handler http.Handler) http.HandlerFunc {
-	return func(w http.ResponseWriter, req *http.Request) {
-		w.Header().Set("Server", "opencars")
-		w.Header().Set("Connection", "keep-alive")
-		w.Header().Set("Content-Type", "application/json; charset=utf-8")
+// func Server(handler http.Handler) http.HandlerFunc {
+// 	return func(w http.ResponseWriter, req *http.Request) {
+// 		w.Header().Set("Server", "opencars")
+// 		w.Header().Set("Connection", "keep-alive")
+// 		w.Header().Set("Content-Type", "application/json; charset=utf-8")
 
-		handler.ServeHTTP(w, req)
-	}
-}
+// 		handler.ServeHTTP(w, req)
+// 	}
+// }
 
 // Validator validates request.
 type Validator interface {
@@ -83,24 +83,29 @@ func health(w http.ResponseWriter, _ *http.Request) {
 
 // Run registers routes and starts web server.
 func Run(addr, uri string) {
-	log.Printf("Server is listening %s\n", addr)
+	router := mux.NewRouter()
+	v1 := router.PathPrefix("/api/v1").Subrouter()
 
-	vehicle := http.NewServeMux()
-	// GET /vehicle/registrations.
-	vehicle.Handle("/registrations", newRegsHandler(uri))
-	// GET /vehicle/operations.
-	vehicle.HandleFunc("/operations", operations)
+	// GET /api/v1/health.
+	// GET /api/v1/version.
+	v1.HandleFunc("/health", health)
+	v1.Handle("/version", version.Handler{})
 
-	router := http.NewServeMux()
-	router.Handle("/vehicle/", http.StripPrefix("/vehicle", vehicle))
-	// GET /health.
-	router.HandleFunc("/health", health)
-	// GET /version.
-	router.Handle("/version", version.Handler{})
+	// GET /api/v1/transport/registrations.
+	// GET /api/v1/transport/operations.
+	// GET /api/v1/transport/wanted.
+	transport := v1.PathPrefix("/transport").Subrouter()
+	transport.Handle("/registrations", newRegsHandler(uri)).Methods("GET", "OPTIONS")
+	transport.HandleFunc("/operations", operations).Methods("GET", "OPTIONS")
+	transport.HandleFunc("/wanted", wanted).Methods("GET", "OPTIONS")
 
+	// Enable CORS.
+	router.Use(mux.CORSMethodMiddleware(router))
+
+	loggedRouter := handlers.LoggingHandler(os.Stdout, router)
 	server := &http.Server{
 		Addr:         addr,
-		Handler:      cors.Default().Handler(Server(router)),
+		Handler:      loggedRouter,
 		ReadTimeout:  5 * time.Second,
 		WriteTimeout: 10 * time.Second,
 		IdleTimeout:  15 * time.Second,
@@ -108,6 +113,7 @@ func Run(addr, uri string) {
 
 	server.SetKeepAlivesEnabled(true)
 
+	log.Printf("Server is listening %s\n", addr)
 	if err := server.ListenAndServe(); err != nil {
 		log.Fatalf("Could not listen on %s. Error: %v\n", addr, err)
 	}
